--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -14,15 +14,42 @@
     background-color: grey;
     padding: 10px;
 }
-.pianoInstructions{
-    text-align: center;
+
+.pianoInstructions h2{
+    text-align: left;
+    width: 25%;
+}
+.pianoInstructions p{
+    text-align: left;
+    width: 20%;
 }
 .keys{
     text-align: center;
 }
 .keyButton{
-   width: 50px;
-   height: 200px;
+    width: 50px;
+    height: 200px;
+}
+.keyButton:active{
+    position: relative;
+    top: 1px;
+    
+}
+.g{
+  color: white;
+  background: black;
+}
+.b{
+    color: white;
+    background: black; 
+}
+.c{
+    color: white;
+    background: black; 
+}
+.e{
+    color: white;
+    background: black;
 }
 
 .keyButton:nth-child(2){
@@ -78,4 +105,7 @@
     height: 300px;
     width: 20%;
     float: left;
+}
+.duration{
+    box-shadow: 10px 5px 5px red;
 }
