--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -19,6 +19,7 @@
     .keyButton{
         width: 1.9rem;
         height: 10rem;
+        border-radius: 0 0 .4rem .4rem;
         padding-top: 5rem;
     }
     .keyButtonSharp{
@@ -27,6 +28,7 @@
         padding: 0cm;
         width: 1.5rem;
         background-color: black;
+        border-radius: 0  0 .4rem .4rem;
         color: white;
     }
     .keyButtonSharp:nth-of-type(1){
@@ -45,9 +47,27 @@
         right: 1.1rem;
     }
 
+    .light{
+        display: inline-block;
+        width:20px;
+        height:20px;
+        border-radius: 50%;
+        background-color: red;
+        border: 2px solid darkslategray;
+    }
+    .dark{
+        display: inline-block;
+        width:20px;
+        height:20px;
+        border-radius: 50%;
+        background-color: grey;
+        border: 2px solid darkslategray;
+    }
     
     .chart{
-       max-width: 100%;
+       width: 100%;
+       height: 100%;
+       box-sizing: content-box;
     }
     .trackNotes{
         display: none;
@@ -55,6 +75,11 @@
     .piano img{
         margin-top: 1rem;
         
+        width: 2rem;
+        height: 2rem;
+    }
+     img{
+        margin-top: 1rem;
         width: 2rem;
         height: 2rem;
     }
@@ -72,7 +97,6 @@
         display: block;
         top: 10%;
         /* right: 50%; */
-       
         background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
         animation: slideIn .25s linear;
         border-radius: 1rem;
