--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -9,6 +9,27 @@
        
         background-color: grey;
     }
+    .header{
+        list-style: none;
+        display: flex;
+        justify-content: space-around;
+        border-radius: 2em;
+        box-shadow:  -1em -1em  4em 3em rgba(51,60,100, 1);
+    }
+
+    .header li {
+        padding: 1rem;
+        border-radius: 2em;
+        background-color: rgba(51,60,100, .5);
+
+    }
+    .header a {
+        text-decoration: none;
+    }
+    .header li:hover {
+        padding: 1rem;
+        background-color: rgba(51,60,100, .1);
+    }
     .piano{
         display: flex;
         flex-wrap: wrap;
@@ -17,34 +38,34 @@
     }
    
     .keyButton{
-        width: 1.9rem;
+        width: 3.3rem;
         height: 10rem;
         border-radius: 0 0 .4rem .4rem;
         padding-top: 5rem;
     }
     .keyButtonSharp{
         position: absolute;
-        height: 5rem;
+        height: 6rem;
         padding: 0cm;
-        width: 1.5rem;
+        width: 2rem;
         background-color: black;
         border-radius: 0  0 .4rem .4rem;
         color: white;
     }
     .keyButtonSharp:nth-of-type(1){
-        right: 10.6rem;
+        right: 18.8rem;
     }
     .keyButtonSharp:nth-of-type(2){
-        right: 8.8rem;
+        right: 15.5rem;
     }
     .keyButtonSharp:nth-of-type(3){
-        right:4.9rem;
+        right: 8.9rem;
     }
     .keyButtonSharp:nth-of-type(4){
-        right: 3rem;
+        right: 5.6rem;
     }
     .keyButtonSharp:nth-of-type(5){
-        right: 1.1rem;
+        right: 2.4rem;
     }
 
     .light{
