--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -45,6 +45,8 @@
         background: rgb(2,0,36);
     }
 
+
+    
     .piano{
         display: flex;
         flex-wrap: wrap;
@@ -83,6 +85,7 @@
         right: 2.4rem;
     }
 
+
     .light{
         display: inline-block;
         width:20px;
@@ -97,14 +100,14 @@
         height:20px;
         border-radius: 50%;
         background: rgb(65,228,26);
-background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
+        background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
     }
     
     .chart{
-       width: 100%;
-       height: 100%;
-       box-sizing: content-box;
-       background: rgb(2,0,36);
+        width: 100%;
+        height: 100%;
+        box-sizing: content-box;
+        background: rgb(2,0,36);
         background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 25%, rgba(0,212,255,1) 100%);
     }
 
@@ -113,7 +116,6 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
     }
     .piano img{
         margin-top: 1rem;
-        
         width: 2rem;
         height: 2rem;
     }
@@ -132,6 +134,58 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
         width: 80%;
     }
 
+    .settings{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+        width: 100%;
+       color: white;
+        padding: 10px;
+        animation: appear 1s infinite;
+    }
+
+    .volume{
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .octave{
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .duration{
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .settingsForm{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        border: 2px solid black;
+        
+        /* background-color: cyan; */
+    }
+   
+    .settingsForm :nth-child(2){
+
+
+    }
+    .settingsForm :nth-child(2){
+        /* background-color: blue; */
+        margin: 5px;
+       
+    }
+    .settingsForm :nth-child(3){
+        margin: 5px;
+        /* background-color: blue; */
+
+    }
+  
     .onScreen{
         display: block;
         top: 10%;
@@ -170,6 +224,19 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
             transform: translateX(0%);
         }
     }
+    /* @keyframes appear {
+        from{
+            background-color: rgba(255,255,55, 1);
+            display: block;
+            transform: translateX(0%);
+        }
+
+        to{
+            background-color: rgba(50,11,4,1);
+            display: none;
+            transform: translateX(0%);
+        }
+    } */
 
   
 }
@@ -191,30 +258,39 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
         list-style: none;
         display: flex;
         justify-content: space-around;
-        border-radius: 2em;
         background: rgb(2,0,36);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 25%, rgba(0,212,255,1) 37%);    
+        padding: 2px;
     }
 
     .header li {
         padding: 1rem;
-        border-radius: 1em;
-        background-color: rgba(51,60,100, .5);
-
     }
     .header a {
         text-decoration: none;
+        color: white;
+        font-size: 1.2rem;
     }
+
     .header li:hover {
         padding: 1rem;
         background-color: rgba(119, 141, 236, 0.1);
     }
-    
+
+    .current li:before {
+        top: 0;
+        right: 0;
+        content: "";
+        padding: 1rem;
+        position: absolute;
+        border-top: 3px solid red;
+        border-right: 3px white solid;
+    }
+
     .current li{
         border-radius: 0;
         background: rgb(2,0,36);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 25%, rgba(0,212,255,1) 37%);
     }
+
     .piano{
         display: flex;
         flex-wrap: wrap;
@@ -303,6 +379,56 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
         width: 80%;
     }
 
+    .settings{
+        display: flex;
+        flex-wrap: wrap;
+          width: 100%;
+         color: white;
+          padding: 10px;
+          animation: appear 1s infinite;
+      }
+  
+      .volume{
+          
+      }
+      .octave{
+  
+      }
+      .duration{
+         
+      }
+      .settingsForm{
+          display: flex;
+          flex-wrap: wrap;
+     
+      }
+     
+      .settingsForm :nth-child(1){
+          /* background-color: blue; */
+          align-content: ;
+          margin: 5px;
+      }
+      .settingsForm :nth-child(2){
+          /* background-color: blue; */
+          margin: 5px;
+         
+      }
+      .settingsForm :nth-child(3){
+          margin: 5px;
+          /* background-color: blue; */
+  
+      }
+    
+      .onScreen{
+          display: block;
+          top: 10%;
+          /* right: 50%; */
+          background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
+          animation: slideIn .25s linear;
+          border-radius: 1rem;
+          padding: 10px;
+          text-align: center;
+      }
     .onScreen{
         display: block;
         top: 10%;
