--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -6,8 +6,9 @@
     }
  
     section{
-        border: 2px solid black;
-        background-color: grey;
+        color: blue;
+        /* border: 2px solid black; */
+        /* background-color: grey; */
     }
     .header{
         list-style: none;
@@ -46,21 +47,40 @@
         background: rgb(2,0,36);
     }
 
-
-    
     .piano{
         display: flex;
         flex-wrap: wrap;
-        background-color: blue;
+        /* background-color: blue; */
         justify-content: center;
     }
-
+    .pianoTop{
+        background-color: rgba(177,173,173,.6);
+        display: flex;
+        flex-wrap: wrap;
+        /* background-color: blue; */
+        justify-content: space-between;
+    }
+    .saveTrack{
+        display: flex;
+        width: 100%;
+        margin: .5rem;
+    }
+    .saveTrack input{
+        border: 2px solid black;
+    }
     .keyButton{
         width: 3.3rem;
         height: 10rem;
+        border: solid black;
         border-radius: 0 0 .4rem .4rem;
         padding-top: 5rem;
+        background: rgb(255,255,255);
+        background: linear-gradient(198deg, rgba(255,255,255,1) 0%, rgba(177,173,173,1) 80%);
     }
+    .keyButton:active{
+        background: rgb(255,255,255);
+        background: linear-gradient(183deg, rgba(255,255,255,1) 34%, rgba(252,252,252,1) 50%, rgba(177,173,173,1) 81%);
+            }
     .keyButtonSharp{
         position: absolute;
         height: 6rem;
@@ -135,13 +155,13 @@
         width: 80%;
     }
 
+   
     .settings{
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: center;
         width: 100%;
-       color: white;
         padding: 10px;
         animation: appear 1s infinite;
     }
@@ -247,14 +267,12 @@
 @media only screen and (min-width: 600px) {
     *{
         position: relative;
-        
-      
     }
  
     section{
-        border: 2px solid black;
-       
-        background-color: grey;
+        color: blue;
+        /* border: 2px solid black; */
+        /* background-color: grey; */
     }
     .header{
         list-style: none;
@@ -293,19 +311,28 @@
         background: rgb(2,0,36);
     }
 
+
+    
     .piano{
         display: flex;
         flex-wrap: wrap;
-        background-color: blue;
+        /* background-color: blue; */
         justify-content: center;
     }
-   
+
     .keyButton{
         width: 3.3rem;
         height: 10rem;
+        border: solid black;
         border-radius: 0 0 .4rem .4rem;
         padding-top: 5rem;
+        background: rgb(255,255,255);
+        background: linear-gradient(198deg, rgba(255,255,255,1) 0%, rgba(177,173,173,1) 80%);
     }
+    .keyButton:active{
+        background: rgb(255,255,255);
+        background: linear-gradient(183deg, rgba(255,255,255,1) 34%, rgba(252,252,252,1) 50%, rgba(177,173,173,1) 81%);
+            }
     .keyButtonSharp{
         position: absolute;
         height: 6rem;
@@ -331,6 +358,7 @@
         right: 2.4rem;
     }
 
+
     .light{
         display: inline-block;
         width:20px;
@@ -338,7 +366,6 @@
         border-radius: 50%;
         background: rgb(228,56,26);
         background: radial-gradient(circle, rgba(228,56,26,1) 0%, rgba(50,11,4,1) 100%);
-        
     }
     .dark{
         display: inline-block;
@@ -346,14 +373,14 @@
         height:20px;
         border-radius: 50%;
         background: rgb(65,228,26);
-background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
+        background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
     }
     
     .chart{
-       width: 100%;
-       height: 100%;
-       box-sizing: content-box;
-       background: rgb(2,0,36);
+        width: 100%;
+        height: 100%;
+        box-sizing: content-box;
+        background: rgb(2,0,36);
         background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 25%, rgba(0,212,255,1) 100%);
     }
 
@@ -362,7 +389,6 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
     }
     .piano img{
         margin-top: 1rem;
-        
         width: 2rem;
         height: 2rem;
     }
@@ -381,56 +407,59 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
         width: 80%;
     }
 
+   
     .settings{
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: center;
+        width: 100%;
+        padding: 10px;
+        animation: appear 1s infinite;
+    }
+
+    .volume{
         display: flex;
         flex-wrap: wrap;
-          width: 100%;
-         color: white;
-          padding: 10px;
-          animation: appear 1s infinite;
-      }
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .octave{
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .duration{
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing:border-box;
+       width: 8.5rem;
+    }
+    .settingsForm{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        border: 2px solid black;
+        
+        /* background-color: cyan; */
+    }
+   
+    .settingsForm :nth-child(2){
+
+
+    }
+    .settingsForm :nth-child(2){
+        /* background-color: blue; */
+        margin: 5px;
+       
+    }
+    .settingsForm :nth-child(3){
+        margin: 5px;
+        /* background-color: blue; */
+
+    }
   
-      .volume{
-          
-      }
-      .octave{
-  
-      }
-      .duration{
-         
-      }
-      .settingsForm{
-          display: flex;
-          flex-wrap: wrap;
-     
-      }
-     
-      .settingsForm :nth-child(1){
-          /* background-color: blue; */
-          align-content: ;
-          margin: 5px;
-      }
-      .settingsForm :nth-child(2){
-          /* background-color: blue; */
-          margin: 5px;
-         
-      }
-      .settingsForm :nth-child(3){
-          margin: 5px;
-          /* background-color: blue; */
-  
-      }
-    
-      .onScreen{
-          display: block;
-          top: 10%;
-          /* right: 50%; */
-          background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
-          animation: slideIn .25s linear;
-          border-radius: 1rem;
-          padding: 10px;
-          text-align: center;
-      }
     .onScreen{
         display: block;
         top: 10%;
@@ -469,6 +498,19 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
             transform: translateX(0%);
         }
     }
+    /* @keyframes appear {
+        from{
+            background-color: rgba(255,255,55, 1);
+            display: block;
+            transform: translateX(0%);
+        }
+
+        to{
+            background-color: rgba(50,11,4,1);
+            display: none;
+            transform: translateX(0%);
+        }
+    } */
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -479,142 +521,49 @@ background: radial-gradient(circle, rgba(65,228,26,1) 0%, rgba(15,4,50,1) 100%);
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
+.piano{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.playback{
+    width: 100%;
+    margin: 1.5rem;
+    padding: 1.5rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+.playback button{
+    display: flex;
+    align-items: center;   
+    justify-content: center;
+    height: 50px;
+    min-width: 85px;
+    width: 100px;
+    box-shadow: 0px 0px 5px 4px #bbb;
+    margin: .5rem;
+    padding: .5rem;
+    background-color: grey;
+}
+.playback button img{
+    position: relative;
+    bottom: .5rem;
+    right: .25rem
+}
+.light, .dark {
+    position: relative;
+    left: .25rem;
+}
+
+
+.settings{
+    width: 50%;
+}
+
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
 
 }
-
-/* .pressed{
-    position: relative;
-    top: -1px;
-    background-color: beige;
-}
-.unPressed{
-    background-color: white
-}
-.piano{
-    width: 40%;
-    margin: 0 auto;
-    background-color: grey;
-    border-radius: 5% 50% 5% 5%;
-    padding: 10px;
-}
-.pianoInstructions h2{
-    text-align: left;
-    width: 25%;
-}
-.pianoInstructions p{
-    text-align: left;
-    width: 20%;
-}
-.keys{
-    text-align: center;
-}
-.keyButton{
-    width: 50px;
-    height: 200px;
-}
-.keyButton:active{
-    position: relative;
-    top: 1px;
-    
-}
-.keyButtonSharp:active{
-}
-.itemSharp{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    margin: auto;
-    width:80%;
-}
-
-.keyButtonSharp{
-    display: flex;
-    flex-direction: row;
-    width: 20px;
-    height: 100px;
-    background: black;
-}
-.itemSharp :nth-child(1) button, .itemSharp :nth-child(3) button{
-    position: relative;
-     width: 35px; 
-     left: 25px; 
-    bottom: 200px; 
-    
-    color: white;
-    align-items: center;
-    justify-content: center;
-}
-.itemSharp :nth-child(2) button, .itemSharp :nth-child(4) button{
-    position: relative;
-    bottom: 200px; 
-    color: white;
-    align-items: center;
-    justify-content: center;
-}
-.itemSharp :nth-child(5) button{
-    position: relative;
-    right: 20px;
-    bottom: 200px; 
-    color: white;
-    align-items: center;
-    justify-content: center;
-}
-
-.keyButton:nth-child(2){
-    background-color: black;
-    color: white;
-}
-.playbackControls{
-    display: flex;
-    height: 40px;
-    justify-content: flex-start;
-    justify-content: space-between;
-    align-items: center;
-}
-.playbackControls button{
-    height: 50%;
-}
-.playbackControls :nth-child(2) {
-    position: relative;
-    right: 5%;
-}
-.playbackControls :nth-child(3){
-    position: relative;
-    right: 10%;
-}
-.volume{
-    display: flex;
-    justify-content: space-between;
-    width: 40%;
-}
-.light{
-    display: inline-block;
-    width:20px;
-    height:20px;
-    border-radius: 50%;
-    background-color: red;
-    border: 2px solid darkslategray;
-}
-.dark{
-    display: inline-block;
-    width:20px;
-    height:20px;
-    border-radius: 50%;
-    background-color: grey;
-    border: 2px solid darkslategray;
-}
-.trackNotes{
-    padding: 0 10px 0 0;
-    list-style: none;
-    overflow: scroll;
-    height: 300px;
-    width: 20%;
-    float: left;
-}
-.duration{
-    box-shadow: 10px 5px 5px red;
-} */
