--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -261,6 +261,31 @@
     } */
 
   
+
+    .playback{
+        width: 100%;
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .playback button{
+        display: flex;
+        align-items: center;   
+        justify-content: center;
+        height: 50px;
+        min-width: 85px;
+        width: 100px;
+        box-shadow: 0px 0px 5px 4px #bbb;
+        margin: .5rem;
+        padding: .5rem;
+        background-color: grey;
+    }
+    .playback button img{
+        position: relative;
+        bottom: .5rem;
+        right: .25rem
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -477,6 +502,30 @@
         animation: slideOut .5s linear;
     }
 
+    .playback{
+        width: 100%;
+        margin: 1.5rem;
+        padding: 1.5rem;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .playback button{
+        display: flex;
+        align-items: center;   
+        justify-content: center;
+        height: 50px;
+        min-width: 85px;
+        width: 100px;
+        box-shadow: 0px 0px 5px 4px #bbb;
+        margin: .5rem;
+        padding: .5rem;
+        background-color: grey;
+    }
+    .playback button img{
+        position: relative;
+        bottom: .5rem;
+        right: .25rem
+    }
     @keyframes slideIn {
         from{
             
