Add message for duplicate email error

--- a/src/components/app/style.css
+++ b/src/components/app/style.css
@@ -140,11 +140,11 @@
         width: 2rem;
         height: 2rem;
     }
-     img{
+     /* img{
         margin-top: 1rem;
         width: 2rem;
         height: 2rem;
-    }
+    } */
   
     .settings{
       display: flex;
