--- a/src/containers/UserSignUpPage/style.css
+++ b/src/containers/UserSignUpPage/style.css
@@ -16,3 +16,24 @@
 .signUpForm p{
     font-size: 1.5rem;
 }
+
+.errorMessage{
+    padding: 1rem;
+    margin: 1rem;
+    background-color: rgba(214, 35, 35, 0.8);
+    color: #FFF;
+    border-radius: 1rem;
+    animation: fadeIn 500ms linear;
+}
+
+@keyframes fadeIn{
+ 0%{
+    background-color: rgba(200, 0, 0, 0);
+
+ }
+}
+@-webkit-keyframes fadeIn{
+    0% {
+        background-color: rgba(200, 0, 0, 0);
+    }
+}
